--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="#Home">Home</li>
+			<li><a href="#About us">About us</li>
+			<li><a href="#Contact us">Contact us</li>
+		</ul>
+	</nav>
+	<main>
+		<h2>3 random images</h2>
+		<div class="ramdom-images">
+			 <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+             <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+             <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+			
+		</div>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
